[gd_scene load_steps=8 format=2]

[ext_resource path="res://addons/godot-stacks-sdk/tests/LoginManager.gd" type="Script" id=1]
[ext_resource path="res://addons/godot-stacks-sdk/utils/WalletConnector.gd" type="Script" id=2]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[node name="TestLogin" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -192.0
margin_top = 128.0
margin_right = -96.0
margin_bottom = 142.0
rect_scale = Vector2( 4, 4 )
text = "Login"
align = 1
valign = 1

[node name="Buttons" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -153.0
margin_top = -128.0
margin_right = 153.0
margin_bottom = 128.0
custom_constants/separation = 32

[node name="ButtonStacksWallet" type="Button" parent="Buttons"]
unique_name_in_owner = true
margin_top = 96.0
margin_right = 306.0
margin_bottom = 160.0
rect_min_size = Vector2( 306, 64 )
size_flags_vertical = 6
text = "Connect Stacks Wallet"

[node name="WalletConnector" type="Node" parent="."]
script = ExtResource( 2 )

[node name="LoadingRect" type="ColorRect" parent="."]
visible = false
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0.368627, 0.368627, 0.368627, 0.866667 )

[node name="LoadingCancelButton" type="Button" parent="."]
visible = false
margin_right = 1280.0
margin_bottom = 720.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )

[node name="LoadingLabel" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -640.0
margin_top = -40.0
margin_bottom = -10.0
rect_scale = Vector2( 2, 2 )
text = "Waiting for wallet.."
align = 1
valign = 1
autowrap = true

[connection signal="pressed" from="LoadingCancelButton" to="." method="_on_LoadingCancelButton_pressed"]
